# SweepGraph

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
docs/guides/: GETTING_STARTED.md
frontend/: app.py
frontend/pages/: 1_🔍_Explorer.py  2_✏️_Editor.py  3_📊_Dashboard.py
frontend/utils/: graph_helpers.py  neo4j_connector.py
prompts/v5/templates/: prompt_template.txt
scripts/: __init__.py  import_to_neo4j.py
scripts/templates/: sweep_template.py
scripts/utilities/: quickstart_demo.py
scripts/utils/: __init__.py
